Thread pool samples added